--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="author" >
-        <img src="/1.jpg" alt="">
+        <img src="css/1.jpg" alt="">
         <!-- <small>Md. Jony Islam</small> -->
 
     </div>
